# scc

./: .gitattributes  .gitignore  .goreleaser.yml  .ignore  .sccignore  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  LANGUAGES.md  LICENSE  Makefile  NOTES.md  README.md  SCC-OUTPUT-REPORT.html  benchmark.sh  benchmark_to_chart.py  config.go  config_test.go  constants.go  convert.py  database_languages.json  database_languages2.json  go.mod  go.sum  index.html  languages.json  main.go  main_test.go  mcp.go  mcp_test.go  merge.py  output.html  regression_test.go  tasks.go  test-all.sh  test.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
assets/: database_languages.json  merge.py
examples/: create_folders_with_files.py  create_performance_test.py  issue246.py  twolines.py
examples/language/: .bash_login  .cshrc  .ignore  .kshrc  .tcshrc  Amber.ab  ArkTs.ets  Blueprint.blp  Build.csx  CMakeLists.txt  Dockerfile  FSharp.fs  GNUMakefile  Gemfile  HassIQApp.mc  MLIR.mlir  POML.poml  PostScript.ps  Rakefile  Sally.yarn  TOML.toml  TOON.toon  abnf.abnf  alchemist.crn  algol68.a68  apex.apex  astro.astro  barber_solutions.als  bean.beancount  bicep.bicep  bitbucket-pipelines.yml  boo.boo  bosque.bsq  bru.bru  c.c  c3.c3  cairo.cairo  capnproto.capnp  chapel.chpl  cheader.h  (+107 more)
http/: main.go
mcpserver/: mcpserver.go  tools.go  tools_test.go
processor/: bloom.go  bloom_filter.go  buffer.go  buffer_test.go  byte_filters.go  cocomo.go  cocomo_test.go  cognitive_nesting_test.go  constants.go  detector.go  detector_test.go  (+77 more)
(+83 files in other folders)
